--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "install": "^0.13.0",
+    "lucide-react": "^0.545.0",
     "npm": "^11.6.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
