--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
-MONGO_URI =  mongodb+srv://imran:imran@cluster0.unszjqv.mongodb.net/eduverse-db?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI =  ""
 JWT_SECRET = abc12345
 NODE_ENV = development
