--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "server": "node server/server.js",
     "client": "cd client && npm run dev",
-    "build": "npm install && cd client && npm install && npm run build",
+    "build": "npm install && cd client && npm install --legacy-peer-deps && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
